instances/ibm-sfg-b2bi-mssql/sfg-ac-server.yaml

---
# Source: ibm-sfg-b2bi/charts/ibm-sfg-prod/templates/ac-statefulset.yaml
# (C) Copyright 2019 Syncsort Incorporated. All rights reserved.


apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: "sfg-ac-server"
  labels:
    tier: backend
    app.kubernetes.io/name: "sfg"
    helm.sh/chart: "ibm-sfg-prod"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "release-name"
    release: "release-name"
    app.kubernetes.io/component: "ac-server"
    
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: "sfg"
      helm.sh/chart: "ibm-sfg-prod"
      app.kubernetes.io/managed-by: "Helm"
      app.kubernetes.io/instance: "release-name"
      release: "release-name"
      app.kubernetes.io/component: "ac-server"
      
  serviceName: "sfg-cluster-svc"
  template:
    metadata:
      labels:
        tier: backend
        app.kubernetes.io/name: "sfg"
        helm.sh/chart: "ibm-sfg-prod"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/instance: "release-name"
        release: "release-name"
        app.kubernetes.io/component: "ac-server" 
      annotations:        
        productID: "0acf190850514574bb48a3d0ac0341e6"
        productName: "IBM Sterling File Gateway Enterprise Edition Certified Container"
        productVersion: "6.1.0.0"
        productMetric: "VIRTUAL_PROCESSOR_CORE"
        productChargedContainers: ac
    spec:
      serviceAccountName: b2bi
      hostNetwork: false
      hostPID: false
      hostIPC: false
      securityContext:
        
        fsGroup: 1010
        runAsNonRoot: true
        runAsUser: 1010
        supplementalGroups:
        - 65534
      volumes:
        - name: resources
          persistentVolumeClaim:
            claimName: "ibm-sfg-b2bi-sfg-resources"   
        - name: logs
          persistentVolumeClaim:
            claimName: "ibm-sfg-b2bi-sfg-logs"
        - name: "documents"
          persistentVolumeClaim:
            claimName: "ibm-sfg-b2bi-sfg-documents"
        - name: configmap-resources-volume
          configMap:
           name: "sfg-config"
        - name: configmap-properties-volume
          configMap:
           name: "sfg-config-property"           
        - name: configmap-dummy-properties-volume
          configMap:
           name: "sfg-config-dummy-property"
        # extra configured volumes
      imagePullSecrets:
        - name: ibm-entitlement-key     
      containers:
        - name: "ac"
          image: "cp.icr.io/cp/ibm-sfg/sfg:6.1.0.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 50085
              protocol: TCP
            - name: adapter-1
              containerPort: 30401
              protocol: TCP
          volumeMounts: 
            - name: resources
              mountPath: /ibm/resources  
            - name: logs
              mountPath: /ibm/trace  
            - name: documents
              mountPath: /ibm/b2bi/install/documents
            
            - name: configmap-resources-volume
              mountPath: /ibm/resources/setup.cfg
              subPath: setup.cfg
            - name: configmap-properties-volume
              mountPath: /ibm/b2bi/ext-resources/properties
            - name: configmap-dummy-properties-volume
              mountPath: /ibm/b2bi/ext-resources/dummy-properties
              
          args: ["b2bi_run", "ac"]
          resources:
            limits:
              cpu: 4000m
              memory: 8Gi
            requests:
              cpu: 2000m
              memory: 4Gi
          securityContext:
            
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsUser: 1010
          livenessProbe:
            exec:
              command:
              - /bin/sh
              - -c
              - /ibm/b2bi/install/bin/b2biLivelinessCheck.sh ac
            initialDelaySeconds: 600
            timeoutSeconds: 5
            periodSeconds: 60
          readinessProbe:
            tcpSocket:
              port: 50086
            initialDelaySeconds: 600
            timeoutSeconds: 5
            periodSeconds: 60
      
      affinity:        
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:      
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
          preferredDuringSchedulingIgnoredDuringExecution:        
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:  
          preferredDuringSchedulingIgnoredDuringExecution:        
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:  
          preferredDuringSchedulingIgnoredDuringExecution:
