instances/ibm-sfg-b2bi-mssql/sfg-ac-frontend-svc.yaml
---
# Source: ibm-sfg-b2bi/charts/ibm-sfg-prod/templates/ac-frontend-service.yaml
# (C) Copyright 2019 Syncsort Incorporated. All rights reserved.


apiVersion: v1
kind: Service
metadata:
  name: "sfg-ac-frontend-svc"
  labels:
    app.kubernetes.io/name: "sfg"
    helm.sh/chart: "ibm-sfg-prod"
    app.kubernetes.io/managed-by: "Helm"
    
    
    app.kubernetes.io/component: "ac-frontend-svc"

spec:
  type: ClusterIP
  ports:
    - port: 35004
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: "sfg"
    helm.sh/chart: "ibm-sfg-prod"
    app.kubernetes.io/managed-by: "Helm"
    
    
    app.kubernetes.io/component: "ac-server"
